# AstralixiOS

./: AstralixiDocs.md  GOALS.md  GOALS.txt  LICENSE  README.md  astralixiOSapi.h  astralixiOSapi.py  errors_during_build.txt
PicoCalc[EOL]/: kernel.c
PicoCalc[EOL]/drivers/: display.c  display.h  keyboard.c  keyboard.h  lcd.c  lcd.h  sdcard.h
api/: Making TUI Apps.md  Making_TUI_Apps.md  astralixios_api.py
builds/: ASTRALIXI_BUILD.txt  KernelNotice.md  UNECCESARY_build_instruction.txt  bcm2711-rpi-cm4.dtb
code/: commands.py  main.py
luckfoxLyraDrivers/picocalc_kbd/: picocalc_kbd.c  picocalc_kbd_code.h
pshell-edited/: cc_extrns.h  cc_malloc.c  cc_malloc.h  cc_peep.c
pshell-edited/cc/: CMakeLists.txt  cc.h  cc_defs.h
sourceCode/: CMakeLists.txt  astralixi-os.c
sourceCode/drivers/: display.c  fat32.c  font.h  font_8x10.c  sdcard.c
